fix button spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -73,3 +73,7 @@ a {
   padding-top: 15px;
   border-top: 1px solid var(--line-color);
 }
+
+.btns {
+  max-width: 85px;
+}
